# shadowaudit

./: .gitignore  README.md  main.py  pyproject.toml
agent/: main_runner.py  minimal_agent.py
analyzer/: anomaly_engine.py  base_analyzer.py  signature_engine.py
cli/: entrypoint.py
collector/: basic_info.py  filesystem.py  pe_inspector.py
core/: config.yaml  config_loader.py  interfaces.py  logger.py  plugin_loader.py  schema_validator.py  utils.py
parser/: base_parser.py  composite_parser.py  file_parser.py  identity_parser.py  parser_errors.py  timestamp_parser.py
plugins/: loader.py
reporter/: base_reporter.py  cli_reporter.py  json_reporter.py
schemas/: base_artifact.schema.json  filesystem_artifact.schema.json
tests/: test_config.py  test_schema.py
