[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowaudit"
version = "0.1.0"
description = "Automated forensic artifact collection and analysis platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ShadowAudit Team" }]
keywords = ["forensics", "artifacts", "DFIR", "collection", "shadowaudit"]

dependencies = [
    "PyYAML>=6.0",
    "colorama>=0.4.6",
    "jsonschema>=4.18.0",
    "psutil>=5.9.0",
    "pefile>=2023.2.7",
    "rich>=13.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "mypy>=1.5",
    "ruff>=0.1.5",
    "types-PyYAML",
    "types-jsonschema"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agent*", "collector*", "parser*", "analyzer*", "reporter*", "cli*", "tests*", "schemas*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
